@@ -3,6 +3,7 @@ plugins {
 	kotlin("plugin.spring") version "1.9.25"
 	id("org.springframework.boot") version "3.5.3"
 	id("io.spring.dependency-management") version "1.1.7"
+	jacoco
 }
 
 group = "com.example"
@@ -14,13 +15,32 @@ java {
 	}
 }
 
+testing {
+	suites {
+		val testIntegration by registering(JvmTestSuite::class) {
+			sources {
+				kotlin {
+					setSrcDirs(listOf("src/testIntegration/kotlin"))
+				}
+				compileClasspath += sourceSets.main.get().output
+				runtimeClasspath += sourceSets.main.get().output
+			}
+		}
+	}
+}
+
 repositories {
 	mavenCentral()
 }
+val testIntegrationImplementation: Configuration by configurations.getting {
+	extendsFrom(configurations.implementation.get())
+}
+
 
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter")
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
+	implementation("org.springframework.boot:spring-boot-starter-web")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
@@ -28,14 +48,26 @@ dependencies {
 	testImplementation("io.kotest:kotest-assertions-core:5.9.1")
 	testImplementation("io.kotest:kotest-property:5.9.1")
 	testImplementation("io.mockk:mockk:1.14.4")
-}
+	testImplementation("com.ninja-squad:springmockk:4.0.2")
+	testIntegrationImplementation("io.mockk:mockk:1.13.8")
+	testIntegrationImplementation("io.kotest:kotest-assertions-core:5.9.1")
+	testIntegrationImplementation("io.kotest:kotest-runner-junit5:5.9.1")
+	testIntegrationImplementation("com.ninja-squad:springmockk:4.0.2")
+	testIntegrationImplementation("io.kotest.extensions:kotest-extensions-spring:1.3.0")
+	testIntegrationImplementation("org.springframework.boot:spring-boot-starter-test") {
+		exclude(module = "mockito-core")
+	}
 
+}
+tasks.test {
+	// ...
+	jvmArgs(
+		"--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+	)
+}
 kotlin {
 	compilerOptions {
 		freeCompilerArgs.addAll("-Xjsr305=strict")
 	}
 }
 
-tasks.withType<Test> {
-	useJUnitPlatform()
-}
